--- a/package.json
+++ b/package.json
@@ -6,18 +6,31 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.14.9",
+    "@types/uuid": "10.0.0",
+    "@typescript-eslint/eslint-plugin": "7.14.1",
+    "@typescript-eslint/parser": "7.14.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "prettier": "3.3.2",
     "tsup": "8.1.0",
     "tsx": "4.15.7",
     "typescript": "5.5.2"
   },
   "dependencies": {
-    "fastify": "4.28.0"
+    "dotenv": "16.4.5",
+    "fastify": "4.28.0",
+    "uuid": "10.0.0",
+    "zod": "3.23.8"
   }
 }
