--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "7.14.1",
     "@typescript-eslint/parser": "7.14.1",
+    "@vitest/coverage-v8": "1.6.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -25,7 +29,9 @@
     "prettier": "3.3.2",
     "tsup": "8.1.0",
     "tsx": "4.15.7",
-    "typescript": "5.5.2"
+    "typescript": "5.5.2",
+    "vitest": "1.6.0",
+    "vitest-tsconfig-paths": "3.4.1"
   },
   "dependencies": {
     "dotenv": "16.4.5",
