--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.14.9",
+    "@types/supertest": "6.0.2",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "7.14.1",
     "@typescript-eslint/parser": "7.14.1",
@@ -29,6 +32,7 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-prettier": "5.1.3",
     "prettier": "3.3.2",
+    "supertest": "7.0.0",
     "tsup": "8.1.0",
     "tsx": "4.15.7",
     "typescript": "5.5.2",
